syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/Qitmeer/qng/p2p/proto/v1/gogo.proto";
import "github.com/Qitmeer/qng/p2p/proto/v1/message.proto";

message Inventory {
  repeated InvVect invs =1 [(gogoproto.moretags) = "ssz-max:\"20000\""];
}

message InvVect {
  uint32 type = 100;
  Hash hash = 101;
}